# til_notes

./: .gitignore  LICENSE  README.md
.github/workflows/: update-readme.yml
assets/: AGENTS.md
notes/case-studies/: 2025-08-14-modularizing-large-shiny-app.md  2025-08-30-r-bigdata-benchmarks-updated.md  2025-09-14-nicverso-ci-overhaul.md  2025-09-19-debugging-multiple-R-versions-with-rig-and-renv.md  2025-11-20-shinyloadtest-performance-comparison.md  2025-12-17-nota_estilo_apresentacoes_quarto_revealjs.md  2026-01-05-school_detection_from_satellite_imagery.md  template.md
projects/hello-cli/: hello.py
projects/python-package-skeleton/: README.md  pyproject.toml
projects/python-package-skeleton/src/python_package_skeleton/: __init__.py  __main__.py
projects/python-package-skeleton/tests/: test_basic.py
scripts/: new_til.py  update_readme.py
til/2025/08/: 2025-08-01-sf-vs-geopolars-caveats.md  2025-08-14-modularization.md  2025-08-24-ggiraph-vs-plotly.md  2025-08-30-leaflet-r-vs-python-caveats.md
til/2025/09/: 2025-09-01-users-vs-contributors-smooth-install-with-pak.md  2025-09-02-gitlab-ci-for-r-packages-fast-caches-with-pak.md  2025-09-07-r-cmd-check-badge-from-ci-(pure-r).md  2025-09-10-release-automation-with-release-cli.md  2025-09-14-dual-gates-air-+-lintr-on-staged-files-and-diffs.md  2025-09-14-sample.md  2025-09-19-managing-multiple-r-versions-with-rig.md  2025-09-30-poetry-quickstart-pitfalls.md
til/2025/10/: 2025-10-01-faster-ci-r-docker.md  2025-10-10-using-goose-migrations.md  2025-10-17-no-duplicated-info-in-shiny-app.md  (+1 more)
(+12 files in other folders)
