[tool.poetry]
name = "python-package-skeleton"
version = "0.1.0"
description = "Tiny example package using Poetry (src layout)"
authors = ["Phil"]
readme = "README.md"
packages = [{ include = "python_package_skeleton", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8"

[tool.poetry.scripts]
hello-skel = "python_package_skeleton.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
